// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scans arg destructuring 1`] = `
FunctionAnalysis (
  0 -> {
    user {
      name {}
    }
  }
)
`;

exports[`scans array for loop 1`] = `
FunctionAnalysis (
  0 -> {
    length {}
    INDEX {
      a {}
    }
  }
)
`;

exports[`scans array for of 1`] = `
FunctionAnalysis (
  0 -> {
    INDEX {
      a {}
      b {}
    }
  }
)
`;

exports[`scans array methods 1`] = `
FunctionAnalysis (
  0 -> {
    INDEX {
      a {}
      b {}
      c {}
      d {}
      e {}
    }
    x {}
  }
)
`;

exports[`scans function calls with multiple arguments 1`] = `
FunctionAnalysis (
  0 -> {
    a {}
    b {}
    name {}
  }
)
`;

exports[`scans function calls with object arguments 1`] = `
FunctionAnalysis (
  0 -> {
    age {}
    name {}
  }
)
`;

exports[`scans imports > import * as x 1`] = `
FunctionAnalysis (
  0 -> {
    n {}
  }
)
`;

exports[`scans imports > import {x} 1`] = `
FunctionAnalysis (
  0 -> {
    n {}
  }
)
`;

exports[`scans imports > import x 1`] = `
FunctionAnalysis (
  0 -> {
    n {}
  }
)
`;

exports[`scans variables with destructuring 1`] = `
FunctionAnalysis (
  0 -> {
    a {
      b {
        c {}
      }
      b2 {}
      b3 {}
    }
  }
)
`;
